--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -9,6 +9,7 @@
     --primaryLight: #a3dcd6;
     --secondary: #4D869C;
     --secondaryLight: #EEF7FF;
+    --backgroundAlt: #eaf0f5;
     --headerColor: #1a1a1a;
     --bodyTextColor: #4e4b66;
     --bodyTextColorWhite: #fafbfc;
@@ -533,10 +534,10 @@
   }
   #cs-navigation .cs-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     margin: auto;
-    max-width: 61.25rem;
+    max-width: 48.75rem;
     width: 100%;
     gap: 1.5rem;
   }
@@ -623,7 +624,7 @@
     /* 14px - 16px */
     font-size: clamp(1.15rem, 1.4vw, 1.4rem);
     line-height: 1.5em;
-    color: var(--bodyTextColorWhite);
+    color: var(--bodyTextColorBlack);
     transition: color 0.3s ease-in-out;
   }
   #cs-navigation .cs-li-link:hover:before {
@@ -752,30 +753,11 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   #cta {
-    position: relative;
-    padding: 3.125rem 0;
-    background-image: url("/assets/images/cta-bg.jpg");
-    background-size: 100%;
-    background-position: center;
+    background: linear-gradient(135deg, var(--primary), #78b7cf 70%);
+    padding: 6.75rem 0;
   }
   #cta .container {
     text-align: center;
-  }
-  #cta picture {
-    z-index: -2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-  }
-  #cta picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
   }
   #cta .title {
     position: relative;
@@ -784,7 +766,7 @@
     line-height: 1.2083333333em;
     font-weight: 900;
     color: #fff;
-    text-align: center;
+    text-align: left;
     font-family: "Barlow Condensed";
   }
   #cta p {
@@ -808,11 +790,26 @@
     height: 100%;
     width: 100%;
   }
+  #cta .cs-button-solid {
+    color: var(--primary);
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    background: white;
+    font-weight: bold;
+    padding: 0.5rem 4.75rem;
+  }
+  #cta .cs-button-solid:before {
+    background-color: black;
+    border: none;
+  }
+  #cta .cs-button-solid:hover {
+    color: white;
+    background: black;
+  }
 }
 /* Small Desktop */
 @media only screen and (min-width: 64em) {
   #cta {
-    padding: 10.5rem 0;
+    padding: 6.75rem 0;
   }
 }
 /* Large Desktop */
@@ -822,96 +819,11 @@
   }
   #cta .container {
     margin: auto;
-    width: 90.0625%;
-  }
-  #cta .container .cs-button-solid {
-    font-size: 1rem;
-    /* 46px - 56px */
-    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-    text-decoration: none;
-    font-weight: 400;
-    text-align: center;
-    margin: 0;
-    color: #fff;
-    min-width: 9.375rem;
-    padding: 0 1.5rem;
-    background-color: var(--primary);
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    /* prevents padding from adding to the width */
-    box-sizing: border-box;
-  }
-  #cta .container .cs-button-solid:before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: white;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
-    border-radius: 30px;
-    border: 2px solid var(--primary);
-  }
-  #cta .container .cs-button-solid:hover {
-    color: var(--primary);
-  }
-  #cta .container .cs-button-solid:hover:before {
-    opacity: 1;
-  }
-  #cta picture {
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90.0625%;
-  }
-  #cta picture:before {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    opacity: 0.7;
-    display: block;
-    background: #000;
-    height: 100%;
-    width: 100%;
-  }
-  #cta:before {
-    display: none;
-  }
-  #cta:after {
-    z-index: -3;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    content: "";
-    opacity: 1;
-    transform: translateX(-50%);
-    display: block;
-    background: url("/assets/svgs/cta-squares.svg");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 69.25rem;
-    width: 125rem;
-  }
-}
-/* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25rem) {
-  #cta {
-    background: url("/assets/images/cta-bg.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    /* creates parallax effect on background image */
-    background-attachment: fixed;
-    /* remove img tag so we can make parallax work */
-  }
-  #cta .cs-background img {
-    display: none;
+    width: 60.0625%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 /*-- -------------------------- -->
@@ -921,7 +833,7 @@
 @media only screen and (min-width: 0em) {
   #footer {
     background: #1c1c1c;
-    padding: 5.25rem 0 1.25rem;
+    padding: 5.25rem 0 5rem;
     font-size: min(4vw, 1.2em);
   }
   #footer .left-section {
@@ -979,7 +891,7 @@
     opacity: 0.9;
     margin-bottom: 0.75rem;
     list-style: none;
-    font-size: 1.125rem;
+    font-size: 1.375rem;
     color: #fff;
   }
   #footer .right-section .lists ul li a {
@@ -987,6 +899,7 @@
     line-height: 1.1666666667em;
     color: #fff;
     transition: color 0.3s;
+    font-size: 1.375rem;
   }
   #footer .right-section .lists ul li a:hover {
     color: var(--primary);
@@ -995,7 +908,7 @@
     position: relative;
     margin-bottom: 2.3125rem;
     text-transform: uppercase;
-    font-size: 1.125rem;
+    font-size: 1.75rem;
     line-height: 1.1666666667em;
     font-weight: bold;
     color: #fff;
