--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -5,18 +5,10 @@
 <section id="cta">
     <div class="container">
         <h2 class="title">
-            Get It Done
+            Boost Your Online
             <br />
-            With Us Today
+            Presence Today!
         </h2>
-        <p>
-            Get the exposure your business deserves today! Discover the possibilities that await with Dual Stream Web Designs, and take control of your online presence.
-        </p>
         <a href="/contact" class="cs-button-solid">Contact Us</a>
     </div>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cta-bg.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cta-bg.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cta-bg.jpg" alt="coding image" loading="lazy" width="2500" height="1667">
-    </picture>
 </section>
