--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -6,6 +6,7 @@
 @media only screen and (min-width: 0rem) {
   #RTsbs-1594, #RTsbsr-1594, #RTsbst-1594 {
     padding: var(--sectionPadding);
+    background-color: var(--backgroundAlt);
   }
   #RTsbs-1594 .cs-container, #RTsbsr-1594 .cs-container, #RTsbst-1594 .cs-container {
     width: 100%;
@@ -435,6 +436,7 @@
     overflow: hidden;
     position: relative;
     z-index: 1;
+    background-color: var(--backgroundAlt);
   }
   #why-choose-892 .cs-container {
     width: 100%;
@@ -575,7 +577,6 @@
 @media only screen and (min-width: 0rem) {
   #pricing-357 {
     padding: var(--sectionPadding);
-    background-color: #F8FCFF;
   }
   #pricing-357 .cs-container {
     width: 100%;
@@ -846,7 +847,7 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-    background-color: #F8FCFF;
+    background-color: var(--backgroundAlt);
   }
   #gallery-1716 .cs-container {
     width: 100%;
@@ -991,139 +992,110 @@
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #reviews-278 {
+  #reviews-727 {
     padding: var(--sectionPadding);
   }
-  #reviews-278 .cs-container {
+  #reviews-727 .cs-container {
     width: 100%;
-    /* changes to 1280px at tablet*/
+    /* changes to 1280px at tablet */
     max-width: 34.375rem;
     margin: auto;
-  }
-  #reviews-278 .cs-picture {
-    width: 100%;
-    /* 200px - 304px */
-    height: clamp(12.5rem, 23.45vw, 19rem);
-    display: block;
-    position: relative;
-  }
-  #reviews-278 .cs-picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-  #reviews-278 .cs-card {
-    max-width: 39.375rem;
-  }
-  #reviews-278 .cs-content {
-    /* set text align to left if content needs to be left aligned */
-    text-align: left;
-    width: 100%;
-    /* Padding top & bottom 40px - 80px */
-    /* Padding left & right 32px - 72px */
-    padding: clamp(2.5rem, 5.8vw, 5rem) clamp(2rem, 5.8vw, 4.5rem);
-    /* prevents padding and border from affecting height and width */
-    box-sizing: border-box;
-    background: var(--primary);
-    display: flex;
-    flex-direction: column;
-    /* centers content horizontally, set to flex-start to left align */
-    align-items: flex-start;
-  }
-  #reviews-278 .cs-content .cs-button-solid {
-    background: #fff;
-    color: var(--primary);
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  }
-  #reviews-278 .cs-content .cs-button-solid:before {
-    background-color: black;
-    border: none;
-  }
-  #reviews-278 .cs-content .cs-button-solid:hover {
-    color: #fff;
-    background-color: black;
-  }
-  #reviews-278 .cs-title,
-  #reviews-278 .cs-topper {
-    color: var(--bodyTextColorWhite);
-  }
-  #reviews-278 .cs-text {
-    color: var(--bodyTextColorWhite);
-    margin-bottom: 1rem;
-  }
-  #reviews-278 .cs-text:last-of-type {
-    margin-bottom: 2rem;
-  }
-  #reviews-278 .cs-review {
-    /* padding left & right 32px - 80px */
-    padding: 2.5rem clamp(2rem, 6vw, 5rem);
-    box-shadow: -1px 21px 39px 0px rgba(0, 0, 0, 0.06);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
   }
-  #reviews-278 .cs-review-img {
-    width: 7rem;
-    height: 1.25rem;
+  #reviews-727 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #reviews-727 .cs-title {
+    max-width: 26ch;
+  }
+  #reviews-727 .cs-card-group {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+  }
+  #reviews-727 .cs-item {
+    list-style: none;
+    width: 100%;
+    margin: 0;
+    /* 32px - 48px top & bottom */
+    /* 16px - 32px left & right */
+    padding: clamp(2rem, 7vw, 3rem) clamp(1rem, 4vw, 2rem);
+    /* makes padding not affect height and width */
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #reviews-727 .cs-icon {
+    /* 30px - 40px */
+    width: clamp(3.5rem, 5.5vw, 3.5rem);
+    height: auto;
+    margin: 0 0 2rem 0;
     display: block;
-    /* margin-bottom 8px - 12px */
-    margin: 0 auto clamp(0.5rem, 2vw, 0.75rem);
   }
-  #reviews-278 .cs-review-title {
-    /* 25px - 31px */
-    font-size: clamp(1.5625rem, 3.1vw, 1.9375rem);
+  #reviews-727 .cs-h3 {
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 4vw, 1.5625rem);
     line-height: 1.2em;
-    text-align: center;
-    font-weight: bold;
-    /* margin-bottom 24px - 32px */
-    margin: 0 auto clamp(1.5rem, 4.2vw, 2rem);
+    font-weight: 700;
+    margin: 0 0 1.5rem 0;
     color: var(--headerColor);
-    display: block;
   }
-  #reviews-278 .cs-review-p {
-    /* 16px - 20px */
-    font-size: clamp(1rem, 2vw, 1.25rem);
+  #reviews-727 .cs-item-text {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 4vw, 1rem);
     line-height: 1.5em;
-    text-align: center;
-    max-width: 27.125rem;
-    /* margin-bottom 24px - 32px */
-    margin: 0 auto clamp(1.5rem, 4.2vw, 2rem);
+    margin: 0 0 3rem 0;
     color: var(--bodyTextColor);
   }
-  #reviews-278 .cs-review-name {
-    /* 16px - 20px */
-    font-size: clamp(1rem, 2vw, 1.25rem);
-    line-height: 1.5em;
-    text-align: center;
-    margin: 0;
-    display: block;
+  #reviews-727 .cs-name {
+    font-size: 1.25rem;
+    line-height: 1.2em;
+    font-weight: 500;
+    margin: auto 0 0 0;
     color: var(--headerColor);
-    font-weight: 700;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
+    position: relative;
+  }
+  #reviews-727 .cs-name:before {
+    content: "";
+    width: 0.5rem;
+    height: 1px;
+    background: currentColor;
+    display: block;
+    position: relative;
   }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #reviews-278 .cs-container {
+  #reviews-727 .cs-container {
     max-width: 80rem;
-    display: flex;
+  }
+  #reviews-727 .cs-card-group {
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: stretch;
-    box-shadow: -1px 21px 39px 0px rgba(0, 0, 0, 0.06);
   }
-  #reviews-278 .cs-card {
-    /* prevents it from being squished by flexbox */
-    flex: none;
-    width: 44.8vw;
-    /* sends it to the right in the second position */
-    order: 2;
-  }
-  #reviews-278 .cs-review {
-    box-shadow: none;
-    width: 50%;
+  #reviews-727 .cs-item {
+    width: 48.5%;
   }
 }
 
