--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -8,6 +8,7 @@
 @media only screen and (min-width: 0rem) {
   #RTsbs-1594, #RTsbsr-1594, #RTsbst-1594 {
       padding: var(--sectionPadding);
+      background-color: var(--backgroundAlt);
       
       .cs-container {
           width: 100%;
@@ -516,6 +517,7 @@
       overflow: hidden;
       position: relative;
       z-index: 1;
+      background-color: var(--backgroundAlt);
 
       .cs-container {
           width: 100%;
@@ -676,7 +678,6 @@
 @media only screen and (min-width: 0rem) {
   #pricing-357 {
       padding: var(--sectionPadding);
-      background-color: #F8FCFF;
 
       .cs-container {
           width: 100%;
@@ -996,7 +997,7 @@
         position: relative;
         z-index: 1;
         overflow: hidden;
-        background-color: #F8FCFF;
+        background-color: var(--backgroundAlt);
         
         .cs-container {
             width: 100%;
@@ -1164,158 +1165,123 @@
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #reviews-278 {
-      padding: var(--sectionPadding);
+    #reviews-727 {
+        padding: var(--sectionPadding);
 
-      .cs-container {
-          width: 100%;
-          /* changes to 1280px at tablet*/
-          max-width: calc(550 / 16 * 1rem);
-          margin: auto;
-      }
+        .cs-container {
+            width: 100%;
+            /* changes to 1280px at tablet */
+            max-width: calc(550 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
 
-      .cs-picture {
-          width: 100%;
-          /* 200px - 304px */
-          height: clamp(12.5rem, 23.45vw, 19rem);
-          display: block;
-          position: relative;
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
+        }
 
-          img {
-              position: absolute;
-              top: 0;
-              left: 0;
-              height: 100%;
-              width: 100%;
-              object-fit: cover;
-          }
-      }
+        .cs-title {
+            max-width: 26ch;
+        }
 
-      .cs-card {
-          max-width: calc(630 / 16 * 1rem);
-      }
+        .cs-card-group {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: calc(20 / 16 * 1rem);
+        }
 
-      .cs-content {
-          /* set text align to left if content needs to be left aligned */
-          text-align: left;
-          width: 100%;
-          /* Padding top & bottom 40px - 80px */
-          /* Padding left & right 32px - 72px */
-          padding: clamp(2.5rem, 5.8vw, 5rem) clamp(2rem, 5.8vw, 4.5rem);
-          /* prevents padding and border from affecting height and width */
-          box-sizing: border-box;
-          background: var(--primary);
-          display: flex;
-          flex-direction: column;
-          /* centers content horizontally, set to flex-start to left align */
-          align-items: flex-start;
+        .cs-item {
+            list-style: none;
+            width: 100%;
+            margin: 0;
+            /* 32px - 48px top & bottom */
+            /* 16px - 32px left & right */
+            padding: clamp(2rem, 7vw, 3rem) clamp(1rem, 4vw, 2rem);
+            /* makes padding not affect height and width */
+            box-sizing: border-box;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
-          .cs-button-solid {
-            background: #fff;
-            color: var(--primary);
-            transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    
+        .cs-icon {
+            /* 30px - 40px */
+            width: clamp(3.5rem, 5.5vw, 3.5rem);
+            height: auto;
+            margin: 0 0 calc(32 / 16 * 1rem) 0;
+            display: block;
+        }
+
+        .cs-h3 {
+            /* 20px - 25px */
+            font-size: clamp(1.25rem, 4vw, 1.5625rem);
+            line-height: 1.2em;
+            font-weight: 700;
+            margin: 0 0 calc(24 / 16 * 1rem) 0;
+            color: var(--headerColor);
+        }
+
+        .cs-item-text {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 4vw, 1rem);
+            line-height: 1.5em;
+            margin: 0 0 calc(48 / 16 * 1rem) 0;
+            color: var(--bodyTextColor);
+        }
+
+        .cs-name {
+            font-size: calc(20 / 16 * 1rem);
+            line-height: 1.2em;
+            font-weight: 500;
+            margin: auto 0 0 0;
+            color: var(--headerColor);
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: calc(8 / 16 * 1rem);
+            position: relative;
             &:before {
-                background-color: black;
-                border: none;
-            }
-    
-            &:hover {
-                color: #fff;
-                background-color: black;
+                content: "";
+                width: calc(8 / 16 * 1rem);
+                height: 1px;
+                background: currentColor;
+                display: block;
+                position: relative;
             }
         }
-      }
-
-      .cs-title,
-      .cs-topper {
-          color: var(--bodyTextColorWhite);
-      }
-
-      .cs-text {
-          color: var(--bodyTextColorWhite);
-          margin-bottom: calc(16 / 16 * 1rem);
-          &:last-of-type {
-              margin-bottom: calc(32 / 16 * 1rem);
-          }
-      }
-    
-      .cs-review {
-          /* padding left & right 32px - 80px */
-          padding: calc(40 / 16 * 1rem) clamp(2rem, 6vw, 5rem);
-          box-shadow: -1px 21px 39px 0px rgba(0, 0, 0, 0.06);
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-      }
-
-      .cs-review-img {
-          width: calc(112 / 16 * 1rem);
-          height: calc(20 / 16 * 1rem);
-          display: block;
-          /* margin-bottom 8px - 12px */
-          margin: 0 auto clamp(0.5rem, 2vw, 0.75rem);
-      }
-
-      .cs-review-title {
-          /* 25px - 31px */
-          font-size: clamp(1.5625rem, 3.1vw, 1.9375rem);
-          line-height: 1.2em;
-          text-align: center;
-          font-weight: bold;
-          /* margin-bottom 24px - 32px */
-          margin: 0 auto clamp(1.5rem, 4.2vw, 2rem);
-          color: var(--headerColor);
-          display: block;
-      }
-
-      .cs-review-p {
-          /* 16px - 20px */
-          font-size: clamp(1rem, 2vw, 1.25rem);
-          line-height: 1.5em;
-          text-align: center;
-          max-width: calc(434 / 16 * 1rem);
-          /* margin-bottom 24px - 32px */
-          margin: 0 auto clamp(1.5rem, 4.2vw, 2rem);
-          color: var(--bodyTextColor);
-      }
-
-      .cs-review-name {
-          /* 16px - 20px */
-          font-size: clamp(1rem, 2vw, 1.25rem);
-          line-height: 1.5em;
-          text-align: center;
-          margin: 0;
-          display: block;
-          color: var(--headerColor);
-          font-weight: 700;
-      }
-  }
+    }
 }
 
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #reviews-278 {
-      .cs-container {
-          max-width: calc(1280 / 16 * 1rem);
-          display: flex;
-          justify-content: center;
-          align-items: stretch;
-          box-shadow: -1px 21px 39px 0px rgba(0, 0, 0, 0.06);
-      }
+    #reviews-727 {
+        .cs-container {
+            max-width: calc(1280 / 16 * 1rem);
+        }
 
-      .cs-card {
-          /* prevents it from being squished by flexbox */
-          flex: none;
-          width: 44.8vw;
-          /* sends it to the right in the second position */
-          order: 2;
-      }
+        .cs-card-group {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
 
-      .cs-review {
-          box-shadow: none;
-          width: 50%;
-      }
-  }
+        .cs-item {
+            width: 48.5%;
+        }
+    }
 }
